; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/helpers/mu-office-lib/extr_mu-office-lib.c_MuOfficePage_calculateZoom.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/helpers/mu-office-lib/extr_mu-office-lib.c_MuOfficePage_calculateZoom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32, i32, i32 }

@MuError_BadNull = common dso_local global i32 0, align 4
@MuError_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MuOfficePage_calculateZoom(%struct.TYPE_7__* %0, i32 %1, i32 %2, float* %3, float* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca float*, align 8
  %11 = alloca float*, align 8
  %12 = alloca %struct.TYPE_8__*, align 8
  %13 = alloca %struct.TYPE_6__, align 4
  %14 = alloca float, align 4
  %15 = alloca float, align 4
  %16 = alloca %struct.TYPE_6__, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store float* %3, float** %10, align 8
  store float* %4, float** %11, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %18 = icmp ne %struct.TYPE_7__* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %5
  %20 = load i32, i32* @MuError_BadNull, align 4
  store i32 %20, i32* %6, align 4
  br label %79

21:                                               ; preds = %5
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  store %struct.TYPE_8__* %24, %struct.TYPE_8__** %12, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %26 = icmp ne %struct.TYPE_8__* %25, null
  br i1 %26, label %29, label %27

27:                                               ; preds = %21
  %28 = load i32, i32* @MuError_BadNull, align 4
  store i32 %28, i32* %6, align 4
  br label %79

29:                                               ; preds = %21
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = call { i64, i64 } @fz_bound_page(i32 %32, i32 %35)
  %37 = bitcast %struct.TYPE_6__* %16 to { i64, i64 }*
  %38 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %37, i32 0, i32 0
  %39 = extractvalue { i64, i64 } %36, 0
  store i64 %39, i64* %38, align 4
  %40 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %37, i32 0, i32 1
  %41 = extractvalue { i64, i64 } %36, 1
  store i64 %41, i64* %40, align 4
  %42 = bitcast %struct.TYPE_6__* %13 to i8*
  %43 = bitcast %struct.TYPE_6__* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %42, i8* align 4 %43, i64 16, i1 false)
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = sub nsw i32 %45, %47
  %49 = mul nsw i32 90, %48
  %50 = sdiv i32 %49, 72
  %51 = sitofp i32 %50 to float
  store float %51, float* %14, align 4
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 2
  %53 = load i32, i32* %52, align 4
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 3
  %55 = load i32, i32* %54, align 4
  %56 = sub nsw i32 %53, %55
  %57 = mul nsw i32 90, %56
  %58 = sdiv i32 %57, 72
  %59 = sitofp i32 %58 to float
  store float %59, float* %15, align 4
  %60 = load float*, float** %10, align 8
  %61 = icmp ne float* %60, null
  br i1 %61, label %62, label %68

62:                                               ; preds = %29
  %63 = load i32, i32* %8, align 4
  %64 = sitofp i32 %63 to float
  %65 = load float, float* %14, align 4
  %66 = fdiv float %64, %65
  %67 = load float*, float** %10, align 8
  store float %66, float* %67, align 4
  br label %68

68:                                               ; preds = %62, %29
  %69 = load float*, float** %11, align 8
  %70 = icmp ne float* %69, null
  br i1 %70, label %71, label %77

71:                                               ; preds = %68
  %72 = load i32, i32* %9, align 4
  %73 = sitofp i32 %72 to float
  %74 = load float, float* %15, align 4
  %75 = fdiv float %73, %74
  %76 = load float*, float** %11, align 8
  store float %75, float* %76, align 4
  br label %77

77:                                               ; preds = %71, %68
  %78 = load i32, i32* @MuError_OK, align 4
  store i32 %78, i32* %6, align 4
  br label %79

79:                                               ; preds = %77, %27, %19
  %80 = load i32, i32* %6, align 4
  ret i32 %80
}

declare dso_local { i64, i64 } @fz_bound_page(i32, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
